[package]
name = "vessels"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[workspace]
members = [".", "./derive"]

[features]
cbor = ["serde_cbor"]
json = ["serde_json"]
bincode = ["serde_bincode"]
core = ["wasm-bindgen", "web-sys", "wasmer-runtime", "derive/core"]

[dependencies]
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
serde = { version = "1.0.101", features = ["derive"] }
failure = "0.1.5"
erased-serde = "0.3.9"
serde_json = { version = "1.0.41", optional = true }
serde_cbor = { version = "0.10.2", optional = true }
serde_bincode = {version = "1.2.0", optional = true, package = "bincode" }
lazy_static = "1.4.0"
weak-table = "0.2.3"
void = "1.0.2"
downcast-rs = "1.1.1"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = { version = "0.2.53", optional = true }
web-sys = { version = "0.3.30", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmer-runtime = { version = "0.9.0", optional = true }

[dependencies.derive]
path = "./derive"
