[package]
name = "vessels"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
serde_cbor = "0.11.1"
serde = "1.0.111"
anyhow = "1.0.31"
core-error = { git = "https://github.com/core-error/core-error" }
thiserror = { git = "https://github.com/noocene/thiserror" }
ring = { version = "0.16.14", optional = true }
core-futures-io = { git = "https://github.com/noocene/core-futures-io", features = ["futures"] }

[features]
containerized = []
ring-sha256 = ["ring"]
