[package]
name = "vessel"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.54"
vessels = { path = "../../", features = ["core"] }
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
js-sys = "0.3.31"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.4"
features = ["console"]
